@@ -23,3 +23,4 @@
 * Readme.txt is no longer autogenerated
 * noretrac.inf (software backbuffer) is no longer supported
 * fordit.inf (invert volt buttons) is no longer supported
+* nemmem.inf (Across memory check) is no longer supported
